--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ author = Daniel Stoops
 maintainer = Daniel Stoops
 author_email = danielstoops25@gmail.com
 maintainer_email = danielstoops25@gmail.com
-platforms = win32
+platforms = Linux, Windows
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
