add project url to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = refers
 long_description = file: README.md
 version = attr: refers.__version__
 description = Reference code simply
-url = http://.com
+url = https://github.com/Stoops-ML/refers
 author = Daniel Stoops
 maintainer = Daniel Stoops
 author_email = danielstoops25@gmail.com
