update setup.cfg platforms: include all platforms

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ author = Daniel Stoops
 maintainer = Daniel Stoops
 author_email = danielstoops25@gmail.com
 maintainer_email = danielstoops25@gmail.com
-platforms = Linux, Windows
+platforms = unix, linux, osx, cygwin, win32
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
