add tox using pipenv

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,17 +11,17 @@ maintainer_email = danielstoops25@gmail.com
 platforms = unix, linux, osx, cygwin, win32
 classifiers =
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3 :: Only
 
 [options]
 packages=
     refers
-python_requires = >=3.6
+python_requires = >=3.7,<3.12
 package_dir =
     =src
 zip_safe = no
@@ -43,3 +43,37 @@ testing =
     mypy~=0.910
     types-toml~=0.10.8.1
     pre-commit~=2.2.0
+    tox
+
+[tox:tox]
+; run before tox in powershell (not inside pipenv shell): pyenv local 3.7.9, 3.8.10, 3.9.13, 3.10.10, 3.11.2
+envlist =
+    py37
+    py38
+    py39
+    py310
+    py311
+
+[testenv]
+setenv =
+    PYTHONPATH = {toxinidir}
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements_dev.txt
+commands =
+    pytest --basetemp={envtmpdir}
+
+[testenv:py37]
+base_python = python37
+
+[testenv:py38]
+base_python = python38
+
+[testenv:py39]
+base_python = python39
+
+[testenv:py310]
+base_python = python310
+
+[testenv:py311]
+base_python = python311
