--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,11 +24,11 @@ repos:
     -   id: flake8
         language_version: python3
 
--   repo: https://github.com/asottile/reorder_python_imports
-    rev: v3.9.0
-    hooks:
-    -   id: reorder-python-imports
-        args: [--py36-plus]
+# -   repo: https://github.com/asottile/reorder_python_imports
+#     rev: v3.9.0
+#     hooks:
+#     -   id: reorder-python-imports
+#         args: [--py36-plus]
 
 -   repo: https://github.com/asottile/pyupgrade
     rev: v2.32.1
