--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,13 +40,19 @@ repos:
         always_run: true
       - id: mypy
         name: mypy
-        entry: mypy .
+        entry: mypy . --install-types --non-interactive
         language: system
         pass_filenames: false
         always_run: true
       - id: flake8
         name: flake8
         entry: flake8
+        language: system
+        pass_filenames: false
+        always_run: true
+      - id: poetry types
+        name: poetry types
+        entry: poetry types update
         language: system
         pass_filenames: false
         always_run: true
