--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ pytest = "^8.1.1"
 reorder-python-imports = "^3.12.0"
 pytest-cov = "^4.1.0"
 flake8-pyproject = "^1.2.3"
+poetry-types = "^0.5.0"
+
+[tool.poetry.group.types.dependencies]
+types-toml = "^0.10.8.20240310"
 
 [build-system]
 requires = ["poetry-core"]
@@ -78,7 +82,8 @@ deps =
     black>=24.2.0
 commands =
     python -m flake8 refers/ tests/
-    python -m mypy refers/ tests/
+    python -m mypy --install-types --non-interactive
+    python -m mypy .
     python -m black --check --diff .
 """
 
