Update examples on commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -63,3 +63,9 @@ repos:
         pass_filenames: false
         always_run: true
         stages: [push]
+      - id: update examples
+        name: refers
+        entry: refers -r examples/example1
+        language: system
+        pass_filenames: false
+        always_run: true
