--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,7 +64,7 @@ repos:
         always_run: true
         stages: [push]
       - id: update examples
-        name: refers
+        name: update examples
         entry: refers -r examples/example1
         language: system
         pass_filenames: false
